# oxide

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
benches/: Cargo.toml
benches/benches/: batch.rs  decode.rs  lib.rs  prefill.rs
docs/: api-reference.md  getting-started.md  library-usage.md
src/: lib.rs  main.rs
src/cli/: banner.rs  history.rs  mod.rs  output.rs  spinner.rs  stream.rs
src/inference/: dynamic_batcher.rs  generator.rs  mod.rs  paged_cache.rs  prefix_cache.rs  simd_dispatch.rs  thread_pinner.rs  tiled_attention.rs
src/model/: loader.rs  tokenizer.rs
